# kedro-mlflow

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-links.yml  dev.yml  prepare-release.yml  publish.yml  pythonpackage.yml  release.yml  security.yml  test.yml  test_on_master.yml  test_on_pr.yml  test_reusable_workflow.yml
docs/: conf.py  index.md  index.rst
docs/01_introduction/: 01_introduction.md  02_motivation.md  03_installation.md
docs/02_tutorial/: 01_overview.md  02_setup.md  03_configuration.md
docs/source/01_introduction/: 01_introduction.md  02_motivation.md  03_installation.md  index.md  index.rst
docs/source/02_getting_started/: 02_setup.md  03_configuration.md  04_versioning_parameters.md  05_artifacts_tracking.md  index.md  index.rst
docs/source/02_hello_world_example/: 01_example_project.md  02_first_steps.md  index.rst
docs/source/02_installation/: 01_installation.md  02_setup.md  03_migration_guide.md  index.rst
docs/source/03_e2e_example/: 01_example_project.md  02_first_step.md  index.rst
docs/source/03_experiment_tracking/: index.md
docs/source/03_getting_started/: 00_intro_tutorial.md  01_example_project.md  02_first_steps.md  index.rst
docs/source/03_quickstart/: 01_example_project.md  02_first_steps.md
docs/source/03_tutorial/: 00_migration_guide.md  01_overview.md  02_setup.md  03_configuration.md  04_version_parameters.md  05_version_datasets.md  05_versioning_datasets.md  06_version_models.md  07_version_metrics.md  08_mlflow_ui.md  09_pipeline_packaging.md  index.rst
docs/source/04_experimentation_tracking/: 01_configuration.md  02_version_parameters.md  03_version_datasets.md  04_version_models.md  05_version_metrics.md  06_mlflow_ui.md  index.rst
docs/source/04_pipeline_as_model/: index.md
docs/source/05_API/: index.md
docs/source/05_framework_ml/: 01_why_framework.md  02_ml_project_components.md  03_framework_example.md  03_framework_solutions.md  04_example_project.md  05_example_project_step_by_step.md  09_pipeline_packaging.md  index.rst
docs/source/05_pipeline_serving/: 01_mlflow_models.md  02_custom_kedro_pipeline_model.md  03_cli_modelify.md  04_hook_pipeline_ml.md  05_deployment_patterns.md  index.rst
docs/source/05_python_objects/: 01_DataSets.md  02_Hooks.md  03_Pipelines.md  04_CLI.md  index.rst
docs/source/06_advanced_use/: 01_run_with_mlproject.md  index.rst
docs/source/06_interactive_use/: 01_notebook_use.md  index.rst
docs/source/06_migration_guide/: index.md  migration_guide_kedro_experiment_tracking.md  migration_guide_kedro_mlflow.md
docs/source/07_python_objects/: 01_DataSets.md  02_Hooks.md  03_Pipelines.md  04_CLI.md
docs/source/08_API/: kedro_mlflow.extras.extensions.rst  kedro_mlflow.framework.cli.rst  kedro_mlflow.framework.hooks.rst  kedro_mlflow.io.rst  kedro_mlflow.rst
docs/source/08_advanced_use/: 02_compatbility_chart.md
docs/source/0_getting_started/: index.md
docs/source/10_experiment_tracking/: 01_configuration.md  03_version_datasets.md  04_version_models.md
docs/source/11_interactive_use/: 01_notebook_use.md
docs/source/1_experiment_tracking/: index.md
docs/source/21_pipeline_serving/: 02_scikit_learn_like_pipeline.md  03_deployment_patterns.md  index.rst
docs/source/22_framework_ml/: 01_why_framework.md  02_ml_project_components.md  03_framework_solutions.md  index.rst
docs/source/2_pipeline_as_model/: index.md
docs/source/30_python_objects/: 01_DataSets.md  04_CLI.md  index.rst
docs/source/31_API/: kedro_mlflow.framework.hooks.rst  kedro_mlflow.io.rst  kedro_mlflow.pipeline.rst
kedro_mlflow/: __init__.py  utils.py
kedro_mlflow/cli/: cli.py  cli_utils.py
kedro_mlflow/config/: __init__.py  kedro_mlflow_config.py  resolvers.py
kedro_mlflow/context/: __init__.py  config.py  mlflow_context.py
kedro_mlflow/extras/extensions/: ipython.py
kedro_mlflow/framework/: __init__.py
kedro_mlflow/framework/cli/: cli.py  cli_utils.py
kedro_mlflow/framework/context/: __init__.py  config.py  mlflow_context.py
kedro_mlflow/hooks/: __init__.py  node_hook.py  node_specs.py  pipeline_hook.py  pipeline_specs.py
kedro_mlflow/io/: __init__.py  mlflow_dataset.py  mlflow_metrics_dataset.py  mlflow_model_dataset.py
kedro_mlflow/mlflow/: __init__.py  kedro_pipeline_model.py
kedro_mlflow/pipeline/: __init__.py  modular_pipeline_ml.py  pipeline_ml.py  pipeline_ml_factory.py
kedro_mlflow/template/: mlflow.yml  run.py
requirements/: docs_requirements.txt  requirements.txt  test_requirements.txt
tests/: conftest.py  dummy_run.py  test_utils.py
tests/config/: test_get_mlflow_config.py  test_kedro_mlflow_config.py  test_resolvers.py
tests/hooks/: test_node_hook.py  test_pipeline_hook.py
tests/io/: test_mlflow_dataset.py  test_mlflow_metrics_dataset.py  test_mlflow_model_dataset.py
tests/mlflow/: test_kedro_pipeline_model.py
tests/pipeline/: test_pipeline_ml.py
(+103 files in other folders)
